# git-footprint

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: analyzer.rs  cli.rs  contribution_calendar.rs  formatter.rs  git_parser.rs  main.rs  scanner.rs
src/version1/: main.rs
